--- a/ss_demo_edge_redirect_ext/public/manifest.json
+++ b/ss_demo_edge_redirect_ext/public/manifest.json
@@ -3,9 +3,17 @@
   "name": "StratSync - AI Co-Pilot (redirect)",
   "version": "1.0.1",
   "description": "Your AI co-pilot for customer success and business growth.",
-
+  "icons": {
+    "16": "public/icons/icon16.png",
+    "48": "public/icons/icon48.png",
+    "128": "public/icons/icon128.png"
+  },
   "browser_action": {
-    "default_popup": "index.html"
+    "default_popup": "dist/index.html",
+    "default_icon": {
+      "16": "public/icons/icon16.png",
+      "48": "public/icons/icon48.png"
+    }
   },
   "background": {
     "scripts": ["background.js"],
@@ -14,21 +22,14 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "run_at": "document_idle"
     }
   ],
-
-  "icons": {
-    "16": "public/icons/icon16.png",
-    "48": "public/icons/icon48.png",
-    "128": "public/icons/icon128.png"
-  },
-
-  "content_security_policy": "script-src 'self'; object-src 'self'",
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "rohit@stratsyc.ai",
-      "strict_min_version": "109.0"
-    }
-  }
+  "permissions": [
+    "storage",
+    "activeTab",
+    "tabs"
+  ],
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
